--- a/StatisticsCalculator/StatisticsCalculator/Views/StatisticsPage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/StatisticsPage.xaml
@@ -18,7 +18,7 @@
             <Setter Property="Grid.RowSpan" Value="2"/>
             <Setter Property="HasShadow" Value="False"/>
             <Setter Property="Margin" Value="30, 0, 30, 0"/>
-            <Setter Property="Padding" Value="0"/>
+            <Setter Property="Padding" Value="5"/>
         </Style>
         <Style x:Key="ResultText" TargetType="Label">
             <Setter Property="BackgroundColor" Value="Transparent"/>
@@ -37,7 +37,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition Height="30"/>
                         <RowDefinition Height="45"/>
-                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
                         <RowDefinition Height="20"/>
                     </Grid.RowDefinitions>
                     <Label
