--- a/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
+++ b/StatisticsCalculator/StatisticsCalculator/Views/SamplePage.xaml
@@ -13,7 +13,7 @@
         <viewModels:SampleViewModel x:Key="SampleVM"/>
         <Style x:Key="SampleCollection" TargetType="CollectionView">
             <Setter Property="BackgroundColor" Value="#eee"/>
-            <Setter Property="HeightRequest" Value="400"/>
+            <Setter Property="HeightRequest" Value="380"/>
         </Style>
     </ContentPage.Resources>
     <ContentPage.Content>
@@ -49,7 +49,7 @@
                     />
                 </Grid>
                 <ContentView 
-                    Margin="5"
+                    Margin="5, 0"
                     BackgroundColor="#aaa"
                     Padding="1"
                 >
@@ -91,7 +91,7 @@
                         Keyboard="Numeric"
                         Margin="10, 0"
                         Text="{Binding EntryValueOfYText}"
-                        Placeholder="{translator:Translate NewSampleItemPlaceholder}"
+                        Placeholder="{translator:Translate Y_NewSampleItemPlaceholder}"
                         IsVisible="False"
                     >
                         <Entry.Triggers>
